[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/top-bar.png" type="Texture" id=1]
[ext_resource path="res://Fonts/bitmap_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/ClickableButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/up-down-tick.png" type="Texture" id=4]
[ext_resource path="res://UI/upgrade-btn.png" type="Texture" id=5]
[ext_resource path="res://UI/options-btn.png" type="Texture" id=6]
[ext_resource path="res://UI/TopBar.gd" type="Script" id=7]
[ext_resource path="res://UI/TooltipTrigger.tscn" type="PackedScene" id=8]

[node name="TopBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -56.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="Label" parent="."]
margin_left = 44.0
margin_right = 64.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.560784, 0.662745, 0.741176, 1 )
text = "JAN70"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateTooltip" parent="Date" instance=ExtResource( 8 )]
margin_left = -1.0
margin_right = 20.0

[node name="Money" type="Label" parent="."]
margin_left = 16.0
margin_right = 38.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.317647, 0.729412, 0.243137, 1 )
text = "$2.34M"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyTooltip" parent="Money" instance=ExtResource( 8 )]
margin_right = 25.0
margin_bottom = 6.0

[node name="MoneyTrend" type="Sprite" parent="."]
visible = false
position = Vector2( 38, 2 )
texture = ExtResource( 4 )
centered = false
hframes = 2

[node name="UpgradeButton" parent="." instance=ExtResource( 3 )]
margin_left = 1.0
margin_top = 1.0
margin_right = 6.0
margin_bottom = 6.0
texture = ExtResource( 5 )

[node name="TooltipTrigger" parent="UpgradeButton" instance=ExtResource( 8 )]
margin_right = 5.0
margin_bottom = 5.0
tooltip_text = "Factory upgrades"

[node name="OptionsButton" parent="." instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = 1.0
margin_right = 13.0
margin_bottom = 6.0
texture = ExtResource( 6 )

[node name="TooltipTrigger" parent="OptionsButton" instance=ExtResource( 8 )]
margin_right = 5.0
margin_bottom = 5.0
tooltip_text = "Game options"

[node name="GameTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
